src/test/ui/range/range_traits-1.stderr
error[E0277]: can't compare `std::ops::Range<usize>` with `std::ops::Range<usize>`
  --> $DIR/range_traits-1.rs:5:5
   |
LL |     a: Range<usize>,
   |     ^^^^^^^^^^^^^^^ no implementation for `std::ops::Range<usize> < std::ops::Range<usize>` and `std::ops::Range<usize> > std::ops::Range<usize>`
   |
   = help: the trait `std::cmp::PartialOrd` is not implemented for `std::ops::Range<usize>`
   = note: required by `std::cmp::PartialOrd::partial_cmp`

error[E0277]: can't compare `std::ops::RangeTo<usize>` with `std::ops::RangeTo<usize>`
  --> $DIR/range_traits-1.rs:8:5
   |
LL |     b: RangeTo<usize>,
   |     ^^^^^^^^^^^^^^^^^ no implementation for `std::ops::RangeTo<usize> < std::ops::RangeTo<usize>` and `std::ops::RangeTo<usize> > std::ops::RangeTo<usize>`
   |
   = help: the trait `std::cmp::PartialOrd` is not implemented for `std::ops::RangeTo<usize>`
   = note: required by `std::cmp::PartialOrd::partial_cmp`

error[E0277]: can't compare `std::ops::RangeFrom<usize>` with `std::ops::RangeFrom<usize>`
  --> $DIR/range_traits-1.rs:11:5
   |
LL |     c: RangeFrom<usize>,
   |     ^^^^^^^^^^^^^^^^^^^ no implementation for `std::ops::RangeFrom<usize> < std::ops::RangeFrom<usize>` and `std::ops::RangeFrom<usize> > std::ops::RangeFrom<usize>`
   |
   = help: the trait `std::cmp::PartialOrd` is not implemented for `std::ops::RangeFrom<usize>`
   = note: required by `std::cmp::PartialOrd::partial_cmp`

error[E0277]: can't compare `std::ops::RangeFull` with `std::ops::RangeFull`
  --> $DIR/range_traits-1.rs:14:5
   |
LL |     d: RangeFull,
   |     ^^^^^^^^^^^^ no implementation for `std::ops::RangeFull < std::ops::RangeFull` and `std::ops::RangeFull > std::ops::RangeFull`
   |
   = help: the trait `std::cmp::PartialOrd` is not implemented for `std::ops::RangeFull`
   = note: required by `std::cmp::PartialOrd::partial_cmp`

error[E0277]: can't compare `std::ops::RangeInclusive<usize>` with `std::ops::RangeInclusive<usize>`
  --> $DIR/range_traits-1.rs:17:5
   |
LL |     e: RangeInclusive<usize>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ no implementation for `std::ops::RangeInclusive<usize> < std::ops::RangeInclusive<usize>` and `std::ops::RangeInclusive<usize> > std::ops::RangeInclusive<usize>`
   |
   = help: the trait `std::cmp::PartialOrd` is not implemented for `std::ops::RangeInclusive<usize>`
   = note: required by `std::cmp::PartialOrd::partial_cmp`

error[E0277]: can't compare `std::ops::RangeToInclusive<usize>` with `std::ops::RangeToInclusive<usize>`
  --> $DIR/range_traits-1.rs:20:5
   |
LL |     f: RangeToInclusive<usize>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ no implementation for `std::ops::RangeToInclusive<usize> < std::ops::RangeToInclusive<usize>` and `std::ops::RangeToInclusive<usize> > std::ops::RangeToInclusive<usize>`
   |
   = help: the trait `std::cmp::PartialOrd` is not implemented for `std::ops::RangeToInclusive<usize>`
   = note: required by `std::cmp::PartialOrd::partial_cmp`

error[E0277]: the trait bound `std::ops::Range<usize>: std::cmp::Ord` is not satisfied
  --> $DIR/range_traits-1.rs:5:5
   |
LL |     a: Range<usize>,
   |     ^^^^^^^^^^^^^^^ the trait `std::cmp::Ord` is not implemented for `std::ops::Range<usize>`
   |
   = note: required by `std::cmp::Ord::cmp`

error[E0277]: the trait bound `std::ops::RangeTo<usize>: std::cmp::Ord` is not satisfied
  --> $DIR/range_traits-1.rs:8:5
   |
LL |     b: RangeTo<usize>,
   |     ^^^^^^^^^^^^^^^^^ the trait `std::cmp::Ord` is not implemented for `std::ops::RangeTo<usize>`
   |
   = note: required by `std::cmp::Ord::cmp`

error[E0277]: the trait bound `std::ops::RangeFrom<usize>: std::cmp::Ord` is not satisfied
  --> $DIR/range_traits-1.rs:11:5
   |
LL |     c: RangeFrom<usize>,
   |     ^^^^^^^^^^^^^^^^^^^ the trait `std::cmp::Ord` is not implemented for `std::ops::RangeFrom<usize>`
   |
   = note: required by `std::cmp::Ord::cmp`

error[E0277]: the trait bound `std::ops::RangeFull: std::cmp::Ord` is not satisfied
  --> $DIR/range_traits-1.rs:14:5
   |
LL |     d: RangeFull,
   |     ^^^^^^^^^^^^ the trait `std::cmp::Ord` is not implemented for `std::ops::RangeFull`
   |
   = note: required by `std::cmp::Ord::cmp`

error[E0277]: the trait bound `std::ops::RangeInclusive<usize>: std::cmp::Ord` is not satisfied
  --> $DIR/range_traits-1.rs:17:5
   |
LL |     e: RangeInclusive<usize>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::cmp::Ord` is not implemented for `std::ops::RangeInclusive<usize>`
   |
   = note: required by `std::cmp::Ord::cmp`

error[E0277]: the trait bound `std::ops::RangeToInclusive<usize>: std::cmp::Ord` is not satisfied
  --> $DIR/range_traits-1.rs:20:5
   |
LL |     f: RangeToInclusive<usize>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::cmp::Ord` is not implemented for `std::ops::RangeToInclusive<usize>`
   |
   = note: required by `std::cmp::Ord::cmp`

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0277`.
